прописана документация(кроме handlers), скорректирован код